WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193894
[LFC][BFC][Quirk] Ignore collapsed(through) margin after when stretching body height.
https://bugs.webkit.org/show_bug.cgi?id=193894
Summary
[LFC][BFC][Quirk] Ignore collapsed(through) margin after when stretching body...
alan
Reported
2019-01-27 21:42:53 PST
ssia
Attachments
Patch
(1.78 KB, patch)
2019-01-27 21:50 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-27 21:50:56 PST
Created
attachment 360317
[details]
Patch
WebKit Commit Bot
Comment 2
2019-01-28 07:29:34 PST
Comment on
attachment 360317
[details]
Patch Clearing flags on attachment: 360317 Committed
r240580
: <
https://trac.webkit.org/changeset/240580
>
WebKit Commit Bot
Comment 3
2019-01-28 07:29:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-01-28 07:31:37 PST
<
rdar://problem/47596579
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug