[LFC][BFC][Quirk] Ignore collapsed(through) margin after when stretching body height. https://bugs.webkit.org/show_bug.cgi?id=193894

Reviewed by Antti Koivisto.

* layout/blockformatting/BlockFormattingContextQuirks.cpp:
(WebCore::Layout::BlockFormattingContext::Quirks::stretchedInFlowHeight):


Canonical link: https://commits.webkit.org/208393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240580 268f45cc-cd09-0410-ab3c-d52691b4dbfc